# Solana-Lottery-Machine

./: .gitignore  README.md
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
rust-cli/: Cargo.toml
rust-cli/src/: cli.yaml  lottery.rs  main.rs  util.rs
scripts/: package.json
scripts/src/: index.ts  utils.ts
