[package]
name = "lottery_mechine"
version = "1.0.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.8.0"
thiserror = "1.0.28"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
spl-associated-token-account = "1.0.2"

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.8.0"
solana-sdk = "=1.8.0"
solana-validator = "=1.8.0"





[lib]
crate-type = ["cdylib", "lib"]